# Email-Drip-Campaign

./: .env.example  .env.production.example  .gitignore  AI Drip Campaign - Full System (1).json  AI Drip Campaign - Full System (7).json  AI Drip Campaign - Full System.json  ARCHITECTURE.md  DEPLOYMENT.md  Dockerfile.worker  Drip_Campaign_Database_Script.sql  MONITORING.md  OPERATIONS_RUNBOOK.md  PRODUCTION_CHECKLIST.md  README.md  SYSTEM_OPERATING_MANUAL.md  cookies.json  docker-compose.prod.yml  docker-compose.yml  formulas.txt  google_sheets.py  requirement.txt  scraper_status.json  smoke_test.py  system_flowchart.html  test_db.py
api/: main.py  tracking.py
codex-fastapi/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  sales_automation_flowchart_v2.md  test.txt
codex-fastapi/.git_backup/: COMMIT_EDITMSG  ORIG_HEAD  index
codex-fastapi/.git_backup/refs/heads/: main
codex-fastapi/app/: auth.py  cleanup.py  config.py  executor.py  logging_config.py  main.py  models.py
codex-fastapi/scripts/: entrypoint.sh  setup.sh
codex-fastapi/skills-repo/ai-sales-team-claude/: .gitignore  README.md  install.sh  uninstall.sh
codex-fastapi/skills-repo/ai-sales-team-claude/agents/: sales-company.md  sales-competitive.md  sales-contacts.md  sales-opportunity.md  sales-strategy.md
codex-fastapi/skills-repo/ai-sales-team-claude/sales/: SKILL.md
codex-fastapi/skills-repo/ai-sales-team-claude/schemas/: sales-qualify-state.schema.json
codex-fastapi/tests/: test_auth.py  test_cleanup.py  test_executor_output.py
(+441 files in other folders)
